# ari-core

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  __init__.py  architecture.txt  install.ps1  install.sh  installation.txt  main.py  pyproject.toml  requirements.text  requirements.txt  setup.py  ~$IBrain Installation Guide.docx
analyses/: getAdjList.py  hommel.py  hommel_backup.cpp  hommel_helpers.py
ari_application/: MANIFEST.in  README.md  __init__.py  main.py  requirements.txt
ari_application/analyses/: ARI.py  getClusters.py  hommel.py  utils.py
ari_application/controllers/: mouse_interactions.py
ari_application/cpp_extensions/cpp_sources/: ARICluster.cpp  ARICluster.h  ARICluster_zeroBased.cpp  hommel.cpp
ari_application/cpp_extensions/cython_modules/: ARICluster.pyx
ari_application/cpp_extensions/info/: Compiling with Cython.rtf  compiling_theory.rtf
ari_application/error_handling/: ErrorHandler.py
ari_application/models/: image_processing.py  metrics.py  nifti_loader.py
ari_application/orth_views/: orth_view_setup.py  orth_view_update.py
ari_application/public/: ARIBrain Installation Guide.docx
ari_application/temp/: coreg_transform.mat
ari_application/ui/: main_window.py  start_window.py
controllers/: mouse_interactions.py
cpp_extensions/cpp_sources/: hommel.h  hommel_zero_based.cpp
cpp_extensions/cython_modules/: ARICluster.cpp  hommel.cpp  hommel.pyx  test_hommel.py
models/: nifti_loader.py
resources/: styles.py
ui/: splash_screen.py  start_window.py
ui/components/: cluster_work_station.py  three_d_viewer.py
(+15 files in other folders)
